--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,33 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.square {
+    background: #fff;
+    border: 1px solid rgb(0, 0, 0);
+    float: left;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 34px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 34px;
+}
+  
+.square:focus {
+    outline: none;
+}
+
+.grid-row {
+    clear: both;
+    content: "";
+    display: table;
+}
+
+.game-grid {
+    width: auto;
+    margin: auto;
+}
