--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,8 @@
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
+    font-family: "Lucida Console", Monaco, monospace;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .square, .square-selected {
@@ -68,4 +62,42 @@ code {
     width: 50%;
     padding-top: 130px;
     text-align: center;
+}
+
+.toolbar {
+    display: flex;
+    align-items: center;
+    padding-top: 35px;
+    font-weight: bold;
+    margin-right: 150px;
+    margin-left: 150px;
+}
+
+.toolbar-elem {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+
+.toolbar button {
+    font-family: "Lucida Console", Monaco, monospace;
+    font-size: 1em;
+    background: none;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.toolbar button:focus {
+    outline: none;
+}
+
+.toolbar button:hover {
+    outline: none;
+    color: rgb(243, 121, 40);
 }
