--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,17 +64,27 @@ body {
 .game-container {
     margin: auto;
     width: 50%;
-    padding-top: 150px;
+    padding-top: 8%;
     text-align: center;
 }
 
 .toolbar {
+    align-items: center;
+    font-weight: bold;
+    margin-top: 4%;
+    margin-right: 15%;
+    margin-left: 15%;
+}
+
+.top-row {
     display: flex;
     align-items: center;
-    padding-top: 35px;
-    font-weight: bold;
-    margin-right: 150px;
-    margin-left: 150px;
+}
+
+.bottom-row {
+    display: flex;
+    align-items: center;
+    margin-top: 4%;
 }
 
 .toolbar-elem {
@@ -97,11 +107,15 @@ body {
     font-weight: bold;
 }
 
-.toolbar button:focus {
+.toolbar button:enabled:focus {
     outline: none;
 }
 
-.toolbar button:hover {
+.toolbar button:enabled:hover {
     outline: none;
     color: rgb(243, 121, 40);
+}
+
+.toolbar button:disabled {
+    cursor: default;
 }
